--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CursoAngular</title>
+  <title>Curso Angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 </head>
 <body>
+
+  <!-- <div class="content">
+    <div class="card">
+      <div class="card-img">
+        <img src="./assets/config_folios.png" alt="">
+      </div>
+      <p class="card-text">Configuracion de folios</p>
+    </div>
+    <div class="card">
+      <div class="card-img">
+        <img src="./assets/catalogos.png" alt="" srcset="">
+      </div>
+      <p class="card-text">catalogos</p>
+    </div> 
+    <div class="card">
+      <div class="card-img">
+        <img src="./assets/rango_modalidades.png" alt="" srcset="">
+      </div>
+      <p class="card-text">rango en modalides</p>
+    </div> 
+  </div> -->
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
   <app-root></app-root>
 </body>
 </html>
